# Universal_Concierge_Plugin

./: .gitignore  ACCEPTABLE_USE.md  ADAPTER_CONTRACT.md  ATTRIBUTION.md  AUTOUPDATER_PLAN.md  BABYLON_ENGINE_PLAN.md  CINEMATIC_3D_PLAN.md  CODEBASE_AUDIT_REMEDIATION_PLAN.md  CONCIERGE_MCP.md  CREDITS.md  CRYPTREE_PORT_SPEC.md  Cargo.toml  DATA_PLATTER_PRIVACY_LOCK_PLAN.md  DECISIONS.md  FUTURE_VISION_SOCIAL_GRAPH.md  FUTURE_VISION_WEB_PUBLISHING.md  HARNESS_EXPANSION_PLAN.md  HOMESTEAD_BUILD_LOG.md  HOMESTEAD_PLAN.md  KERNEL_BUILD_LOG.md  KERNEL_PLAN.md  MCP_MULTIPLEXER_PLAN.md  MOBILE_APP_PLAN.md  NETWORK_DEFENSE_PLAN.md  PHASE_8_NODE_AI_PLAN.md  PLATFORM_VISION.md  PRIVATE_MULTI_AGENT_NETWORK_PLAN.md  PUBLIC_ROOM_IDEAS.md  README.md  SHIPPABLE_PLUGIN_PLAN.md  THREAT_MODEL.md  UNIVERSAL_CONCIERGE_PLUGIN_PLAN.md  YARA_X_MALWARE_SCANNER_PLAN.md  index.html  install.ps1  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml  rules-publish.yml
adapters/aider/: README.md  test_translate.py  translate.py
adapters/autogpt/: README.md  test_translate.py  translate.py
adapters/chatgpt/: README.md  test_translate.py  translate.py
adapters/claude-code/: README.md  concierge_hook.py  settings.snippet.json  test_translate.py  translate.py
adapters/codex/: README.md  test_translate.py  translate.py
adapters/continue/: README.md  test_translate.py  translate.py
adapters/cursor/: README.md  test_translate.py  translate.py
adapters/gemini/: README.md  test_translate.py  translate.py
adapters/hermes/: README.md  __init__.py  plugin.yaml  recorder.py  test_translate.py  translate.py
adapters/ollama/: README.md  proxy.py  test_translate.py
adapters/openhands/: README.md  test_translate.py  translate.py
crates/adapter-aider/: Cargo.toml
crates/adapter-aider/src/: discovery.rs  lib.rs
crates/adapter-antigravity/: Cargo.toml
crates/adapter-antigravity/src/: discovery.rs  lib.rs
crates/adapter-claude-code/: Cargo.toml
crates/adapter-claude-code/src/: discovery.rs  lib.rs
crates/adapter-cline/: Cargo.toml
crates/adapter-cline/src/: discovery.rs  lib.rs
crates/adapter-codex/: Cargo.toml
crates/adapter-codex/src/: discovery.rs  lib.rs
crates/adapter-continue/: Cargo.toml
crates/adapter-continue/src/: discovery.rs  lib.rs
crates/adapter-copilot/: Cargo.toml
crates/adapter-copilot/src/: discovery.rs  lib.rs
crates/adapter-cursor/: Cargo.toml
crates/adapter-cursor/src/: discovery.rs  lib.rs
crates/adapter-gemini/: Cargo.toml
crates/adapter-gemini/src/: discovery.rs  lib.rs
crates/adapter-hermes/: Cargo.toml
crates/adapter-hermes/src/: lib.rs
crates/adapter-hermes/tests/fixtures/: canned_hermes.jsonl
crates/adapter-jsonl/: Cargo.toml
crates/adapter-jsonl/src/: lib.rs
crates/adapter-openclaw/: Cargo.toml
crates/adapter-openclaw/src/: discovery.rs  lib.rs
crates/adapter-opendevin/: Cargo.toml
crates/adapter-opendevin/src/: discovery.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  messaging_commands.rs  network_commands.rs  publishing_commands.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: actor.rs  binding.rs  brain.rs  browser.rs  capability.rs  car.rs  compiler.rs  config.rs  connectors.rs  contacts.rs  deploy.rs  design.rs  dm_outbox.rs  egress.rs  error.rs  event.rs  git_commit.rs  identity.rs  legibility.rs  lib.rs  membership.rs  merge.rs  messaging.rs  moderation.rs  naming.rs  node.rs  outbox.rs  pairing.rs  pinning.rs  private.rs  private_sync.rs  publishing.rs  recovery.rs  retrieval.rs  revocation.rs  security.rs  site.rs  sites.rs  social.rs  state.rs  (+4 more)
crates/core/src/binding/: deployment.rs  identity_naming.rs  messaging_binding.rs  pinning.rs  publication.rs  tests.rs  wallet_binding.rs
crates/core/src/update/: SIGNING.md  app.rs  baseline.rs  mod.rs  rules.rs  verify.rs
crates/core/src/update/baseline/: rules.yar
crates/core/src/youtube/: SETUP.md
crates/crypto/: Cargo.toml
crates/crypto/src/: capability.rs  error.rs  lib.rs  link.rs  node.rs  rotate.rs  secretbox.rs  vault.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.css  app.js  canvas.rs  geoip.rs  index.html  lib.rs  mutations.rs  read_routes.rs  server.rs  studio.js  tests.rs  wallet.js  worldmap.json
crates/gui/src/engines/: CharacterController.js
crates/kernel/: Cargo.toml
crates/kernel-client/: Cargo.toml
crates/kernel-client/src/: client.rs  lib.rs  protocol.rs  transport.rs
crates/kernel/src/: capture.rs  lib.rs  main.rs  node.rs  state.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/mcp/src/engines/: AFRAME-ENVIRONMENT-LICENSE.txt  AMMO-LICENSE.txt  BABYLON-LOADERS-LICENSE.txt  babylonjs.loaders.min.js  three.min.js
crates/mcp/src/guides/: CCGS-LICENSE.txt  art_direction.md  game_design.md  game_studio.md  studio.md
crates/mem/: Cargo.toml  schema.ipldsch
crates/mem/examples/: gen_fixtures.rs
crates/mem/src/: audit.rs  backend.rs  backends.rs  blockstore.rs  cid.rs  commands.rs  config.rs  dag.rs  design.rs  diagnostics.rs  gc.rs  hamt.rs  ingest.rs  lib.rs  main.rs  model.rs  names.rs  node.rs  repl.rs  session.rs  store.rs  tombstones.rs  trace.rs  verifier.rs  work.rs
crates/mem/src/backends/: car.rs  ipfs.rs  pinata.rs
crates/mem/src/ingestors/: source.rs
crates/mem/src/session/: tests.rs
crates/mem/tests/: cli.rs  local_proof.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs  sync.rs  tests.rs  transport.rs
crates/routes/: Cargo.toml
crates/routes/src/: lib.rs
docs/: local-ai-packaged-integration-plan.md
docs/proof/: HOT_RETRIEVAL_TESTIMONY.md
packaging/macos/: Info.plist  build-dmg.sh  launcher.sh
packaging/windows/: concierge.iss  launch.vbs
