[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/mem",
    "crates/crypto",
    "crates/adapter-jsonl",
    "crates/adapter-hermes",
    "crates/adapter-claude-code",
    "crates/adapter-aider",
    "crates/gui",
    "crates/net",
    "crates/mcp",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/gekinthegame/Universal_Concierge_Plugin"

[workspace.dependencies]
chacha20poly1305 = "0.10"
cid = "0.11.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures = "0.3"
hmac = "0.12"
iroh-car = "0.5.1"
libc = "0.2"
libp2p = { version = "0.56", features = ["tokio", "gossipsub", "tcp", "quic", "dns", "noise", "yamux", "macros", "ed25519", "rsa", "relay", "dcutr", "identify", "request-response", "cbor", "autonat", "rendezvous", "kad", "mdns"] }
multihash = "0.19"
notify = "6"
rand_core = { version = "0.6", features = ["getrandom"] }
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3.27.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "io-util", "macros", "sync", "time", "net"] }
toml = "0.8.23"
thiserror = "1"
url = "2"
zeroize = "1"
