[package]
name = "concierge-adapter-aider"
description = "Layer 3 — Aider harness adapter. Discovers and translates Aider's Markdown chat transcripts (.aider.chat.history.md) into Concierge envelopes."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
concierge-core = { path = "../core" }
concierge-adapter-jsonl = { path = "../adapter-jsonl" }

[dev-dependencies]
tempfile = { workspace = true }
