[package]
name = "concierge-adapter-antigravity"
description = "Layer 3 — Antigravity IDE harness adapter. Discovers and translates Antigravity chat sessions (~/.gemini/antigravity-ide/brain/*/logs/transcript.jsonl) into Concierge envelopes."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
concierge-core = { path = "../core" }
concierge-adapter-jsonl = { path = "../adapter-jsonl" }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
