[package]
name = "concierge-adapter-codex"
description = "Layer 3 — Codex CLI harness adapter. Discovers and translates OpenAI Codex CLI session transcripts (~/.codex/sessions/**/rollout-*.jsonl) into Concierge envelopes."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
concierge-core = { path = "../core" }
concierge-adapter-jsonl = { path = "../adapter-jsonl" }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
