[package]
name = "concierge-adapter-continue"
description = "Layer 3 — Continue harness adapter. Discovers and translates Continue session files (~/.continue/sessions/*.json) into Concierge envelopes."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
concierge-core = { path = "../core" }
concierge-adapter-jsonl = { path = "../adapter-jsonl" }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
