[package]
name = "concierge-adapter-copilot"
description = "Layer 3 — VS Code Copilot Chat harness adapter. Discovers and translates workspaceStorage chat session logs into Concierge envelopes."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
concierge-core = { path = "../core" }
concierge-adapter-jsonl = { path = "../adapter-jsonl" }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
