[package]
name = "concierge-adapter-hermes"
description = "Layer 3 — Hermes harness adapter. Translates Hermes ACP-style events into Concierge envelopes."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
concierge-core = { path = "../core" }
concierge-adapter-jsonl = { path = "../adapter-jsonl" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
