[package]
name = "concierge-adapter-jsonl"
description = "Layer 3 — generic JSONL event adapter. The low-friction path for any harness (including Python)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
concierge-core = { path = "../core" }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
