[package]
name = "concierge-plugin"
description = "Universal Concierge Plugin CLI — the mountable entry point."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "concierge-plugin"
path = "src/main.rs"

[dependencies]
# semantic-embed bakes the in-process on-node embedder (fastembed/ONNX → Nomic) into the
# shipped binary; it only *activates* when the Sidekick/Kubo node is enabled (see
# MemCli::librarian_embedder). Feature unification turns it on across the whole concierge-plugin.
concierge-core = { path = "../core", features = ["semantic-embed"] }
concierge-adapter-jsonl = { path = "../adapter-jsonl" }
concierge-adapter-hermes = { path = "../adapter-hermes" }
concierge-adapter-claude-code = { path = "../adapter-claude-code" }
concierge-gui = { path = "../gui" }
concierge-net = { path = "../net" }
concierge-mcp = { path = "../mcp" }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
