[package]
name = "concierge-core"
description = "Universal Concierge Plugin — Layer 1 core binding + Layer 2 host-neutral event API."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cid = { workspace = true }
concierge-crypto = { path = "../crypto" }
# Phase A: link `mem` in-process (replaces the `mem` CLI subprocess in binding.rs).
mem = { path = "../mem" }
ed25519-dalek = { workspace = true }
hmac = { workspace = true }
iroh-car = { workspace = true }
libc = { workspace = true }
multihash = { workspace = true }
rand_core = { workspace = true }
regex = "1.10"
# Multi-platform website publishing (GitHub Pages / Netlify / Vercel / Cloudflare /
# Firebase Hosting).
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
zip = "2"
base64 = "0.22"
sha1 = "0.10"
blake3 = "1"
# Firebase Hosting deploy: gzip each asset (its content hash is SHA256 of the gzip)
# and mint a Google OAuth token by RS256-signing a JWT with the service-account key.
flate2 = "1"
rsa = { version = "0.9", features = ["pem", "sha2"] }
# Brave/Opera wallet attestation (Decision 0033): verify an EVM personal_sign so a
# linked address is cryptographically tied to the AgentID. We hold no keys.
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
scrypt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
# Phase 8 §1: optional small on-node semantic embedder (Decision 0022 — the ONLY
# model on the node, never a generative LLM). Off by default so the base build
# stays light and ONNX-free; enable with `--features semantic-embed`.
fastembed = { version = "4", optional = true }

[features]
default = []
pinata = []
# A real small embedding model (bge-small-en-v1.5) behind the Embedder trait.
# Off by default so the base build carries no ONNX runtime; brute-force cosine
# over the in-memory index + the persisted embed-cache covers personal-node scale.
# (A LanceDB ANN backend would be the future feature for million-vector libraries.)
semantic-embed = ["dep:fastembed"]

[dev-dependencies]
tempfile = { workspace = true }
