[package]
name = "concierge-crypto"
description = "Phase E — Cryptree capability encryption (Decision 0011), implementing the Wuala Cryptree design on proven RustCrypto primitives."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
rand_core = { workspace = true }
scrypt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
