[package]
name = "concierge-gui"
description = "Phase 7/D Data Platter explorer and loopback privacy controls."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
cid = { workspace = true }
concierge-core = { path = "../core" }
concierge-net = { path = "../net" }
concierge-adapter-jsonl = { path = "../adapter-jsonl" }
concierge-adapter-claude-code = { path = "../adapter-claude-code" }
tokio = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
png = "0.18"

[dev-dependencies]
tempfile = { workspace = true }

