[package]
name = "concierge-gui"
description = "Phase 7/D Data Platter explorer and loopback privacy controls."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
cid = { workspace = true }
concierge-core = { path = "../core" }
concierge-net = { path = "../net" }
concierge-adapter-jsonl = { path = "../adapter-jsonl" }
concierge-adapter-claude-code = { path = "../adapter-claude-code" }
concierge-adapter-aider = { path = "../adapter-aider" }
tokio = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
png = "0.18"
# Real geo-IP for the Network discovery map: bundled DB-IP City Lite (CC-BY-4.0),
# gzip-embedded and decompressed once at startup. maxminddb reads the .mmdb format.
maxminddb = "0.28"
flate2 = "1"

[dev-dependencies]
tempfile = { workspace = true }

