[package]
name = "concierge-gui"
description = "Phase 7/D Data Platter explorer and loopback privacy controls."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
cid = { workspace = true }
concierge-core = { path = "../core" }
concierge-net = { path = "../net" }
# Talk to the kernel daemon for the shared warm index. Only the lightweight
# protocol/client is used here — no core re-entry for GUI search.
concierge-kernel = { path = "../kernel" }
# Shared data-route handlers (store reads → JSON) — one implementation, used by
# both the GUI and the kernel so the routes can't drift between them.
concierge-routes = { path = "../routes" }
concierge-adapter-jsonl = { path = "../adapter-jsonl" }
concierge-adapter-claude-code = { path = "../adapter-claude-code" }
concierge-adapter-aider = { path = "../adapter-aider" }
concierge-adapter-codex = { path = "../adapter-codex" }
concierge-adapter-gemini = { path = "../adapter-gemini" }
concierge-adapter-continue = { path = "../adapter-continue" }
concierge-adapter-antigravity = { path = "../adapter-antigravity" }
concierge-adapter-openclaw = { path = "../adapter-openclaw" }
concierge-adapter-cline = { path = "../adapter-cline" }
concierge-adapter-cursor = { path = "../adapter-cursor" }
concierge-adapter-opendevin = { path = "../adapter-opendevin" }
concierge-adapter-copilot = { path = "../adapter-copilot" }
tokio = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
png = "0.18"
# Real geo-IP for the Network discovery map: bundled DB-IP City Lite (CC-BY-4.0),
# gzip-embedded and decompressed once at startup. maxminddb reads the .mmdb format.
maxminddb = "0.28"
flate2 = "1"

[dev-dependencies]
tempfile = { workspace = true }
