[package]
name = "concierge-mcp"
description = "Layer 4 — MCP server: the Concierge's tools/resources over MCP (JSON-RPC 2.0 / stdio)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
concierge-core = { path = "../core" }
# Share the kernel's warm index for `retrieve` (auto-spawn/restart), so the AI's
# retrievals hit the same index as the GUI and CLI. Depends on the dependency-light
# client crate, not the full kernel, so the MCP server stays lean (no libp2p/tokio).
concierge-kernel-client = { path = "../kernel-client" }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
